--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -21,7 +21,45 @@ services:
     networks:
       - app-network
 
- 
+  products-ms:
+    build: ./products
+    volumes:
+      - ./products/src:/usr/src/app/src
+    command: npm run start:dev
+    environment:
+      - PORT=4001
+      - NATS_SERVERS=nats://nats-server:4222
+      - DATABASE_URL=file:./dev.db
+    networks:
+      - app-network
+
+  order-ms:
+    depends_on:
+      - order-db
+    build: ./order-ms
+    volumes:
+      - ./order-ms/src:/usr/src/app/src
+    command: npm run start:dev
+    environment:
+      - DATABASE_URL=postgresql://postgres:postgres@order-db:5432/pruebas?schema=public
+      - PORT=4002
+      - NATS_SERVERS=nats://nats-server:4222
+    networks:
+      - app-network
+
+  #ORDER DB
+  order-db:
+    container_name: orderDB-postgres
+    image: postgres:13
+    ports:
+      - "5432:5432"
+    environment:
+      - POSTGRES_USER=postgres
+      - POSTGRES_PASSWORD=postgres
+      - POSTGRES_DB=pruebas
+    networks:
+      - app-network
+
 ###red
 
 networks:
